# LAN_pipeline_minimal

./: .gitignore  .modulesrc  README.md  installation_conda.sh  installation_mamba.sh  local_network_training.sh  pyproject.toml
bash_scripts/: bash_data_generation.sh  bash_network_training.sh
config/: __init__.py  central_configurator.py  model_performance_utils.py
sbatch_scripts/: gen_sbatch.py  sample_generate_sbatch.sh  sample_jaxtrain_sbatch.sh  sbatch_data_generation.sh  sbatch_network_training.sh  test_gen_sbatch.sh
scripts/: __init__.py  data_generation_script.py  gen_sbatch.py  jax_training_script.py  main.py  torch_training_script.py
user_configs_examples/: config_acct.sh  config_data_generation.yaml  config_network_training_cpn.yaml  sample_generate_sbatch.sh
